[package]
name = "chat_auth_server"
version = "0.1.0"
edition = "2024"
description = "Authentication REST API service for the Krabby core chat implementation"
repository = "https://github.com/KrabbyHQ/chat__auth_server"
homepage = "https://github.com/KrabbyHQ/chat__auth_server"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
config = "0.15.19"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tower-cookies = "0.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "time"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4"] }
[dev-dependencies]
axum-test = "18.7.0"
tokio = { version = "1.49.0", features = ["full", "macros"] }
